[gd_scene load_steps=2 format=3 uid="uid://ck8u1f1ve2ukf"]

[ext_resource type="Script" path="res://Scripts/ComponentScripts/HitboxComponent.gd" id="1_fg102"]

[node name="HitboxComponent" type="Area2D"]
script = ExtResource("1_fg102")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="DisableTimer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="timeout" from="DisableTimer" to="." method="_on_disable_timer_timeout"]
